unpackaged/main/default/objects/Account_Expertise__c/Account_Expertise__c.object-meta.xml
<CustomObject>
    <label>Account Expertise</label>
    <nameField>
        <displayFormat>AE-{000000}</displayFormat>
        <label>Account Expertise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Expertises</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>