unpackaged/main/default/objects/Account_Expertise__c/fields/Cegid_solution__c.field-meta.xml
<CustomField>
    <fullName>Cegid_solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cegid solution</label>
    <type>Checkbox</type>
</CustomField>