unpackaged/main/default/objects/Account_Expertise__c/fields/Commitment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Commitment_End_Date__c</fullName>
    <label>Commitment End Date</label>
    <type>Date</type>
</CustomField>