unpackaged/main/default/objects/Account_Expertise__c/fields/Customer_Success_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Success Contact</relationshipLabel>
    <relationshipName>Account_Expertises</relationshipName>
    <type>Lookup</type>
</CustomField>