unpackaged/main/default/objects/Account_Expertise__c/fields/Last_Date_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_Cancellation__c</fullName>
    <description>Display the Last Date of Cancellation</description>
    <label>Last Date of Cancellation</label>
    <type>Date</type>
</CustomField>