unpackaged/main/default/objects/Account_Expertise__c/fields/Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Date__c</fullName>
    <label>Last Order Date</label>
    <type>Date</type>
</CustomField>