unpackaged/main/default/objects/Account_Expertise__c/fields/Mode_OP_OD__c.field-meta.xml
<CustomField>
    <fullName>Mode_OP_OD__c</fullName>
    <label>Mode (OP/OD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Premise</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>