unpackaged/main/default/objects/Account_Expertise__c/fields/Potential_Booking_Y_1__c.field-meta.xml
<CustomField>
    <fullName>Potential_Booking_Y_1__c</fullName>
    <label>Potential Booking Y+1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>