unpackaged/main/default/objects/Account_Expertise__c/validationRules/VR01_NoCegidSolutionForProspect.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_NoCegidSolutionForProspect</fullName>
    <active>false</active>
    <errorConditionFormula>Cegid_solution__c &amp;&amp;  ISPICKVAL(Account__r.Nature__c, 'Prospect')</errorConditionFormula>
    <errorDisplayField>Cegid_solution__c</errorDisplayField>
    <errorMessage>You can't have a Cegid Solution for a Prospect</errorMessage>
</ValidationRule>